# latent-gemma

./: .gitignore  LICENSE  README.md  fine_tuning_gemma2.ipynb  pyproject.toml  research_journal.md  setup.py
nbs/: fine_tuning_gemma2.ipynb
src/latent_gemma/: __init__.py  main.py
