[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latent-gemma"
version = "0.1.0"
authors = [
    { name = "Victor Umesiobi", email = "vicksemmanuel58@gmail.com" },
]
description = "Latent reasoning implementation for Gemma models"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.0.0"
]

[project.urls]
Homepage = "https://github.com/vicksEmmanuel/latent-gemma"