[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pytest>=8.0.2",
    "ruff>=0.8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latent-gemma"
version = "0.1.0"
description = "Latent reasoning implementation for Gemma models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.1",
    "pandas>=2.1.1",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.3.1",
    "loguru>=0.7.2",
    "tqdm>=4.66.1",
    "transformers[torch]>=4.34.0",
    # "einops>=0.7.0",
    # "loguru>=0.7.2",
    # "simple-parsing>=0.1.4",
    # "torch >=2.1.0+cu124",
    # "lightning>=2.1.0",
    # "torchinfo>=1.8.0",
    # "peft>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/wassname/latent-gemma"
