[project]
name = "latent-gemma"
version = "0.1.0"
authors = [
    { name = "wassname", email = "github@wassname.org" },
]
description = "Latent reasoning implementation for Gemma models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.2.0",
    "evaluate>=0.4.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "numpy>=2.2.1",
    "torch>=2.1.2",
    "tqdm>=4.67.1",
    "transformers[torch]>=4.36.2",
    "wandb>=0.19.2",
]

[project.urls]
Homepage = "https://github.com/wassname/latent-gemma"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pytest>=8.0.2",
    "ruff>=0.8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
